--- a/prototype1/Views/Base.lproj/Main.storyboard
+++ b/prototype1/Views/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <scene sceneID="nml-oO-wGH">
             <objects>
                 <collectionViewController id="TVY-vc-OZk" customClass="MyCollectionViewController" customModule="prototype1" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="KKM-9U-tT2">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="KKM-9U-tT2" customClass="MyCollectionView" customModule="prototype1" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -24,13 +24,32 @@
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                         </collectionViewFlowLayout>
-                        <label key="backgroundView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Uls-5H-0Sn">
+                        <view key="backgroundView" contentMode="scaleToFill" id="GxD-Rc-anQ" customClass="MyView" customModule="prototype1" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="-64" width="375" height="667"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                            <subviews>
+                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="sen-az-btI">
+                                    <rect key="frame" x="177" y="323" width="20" height="20"/>
+                                </activityIndicatorView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R3R-Sr-t1e">
+                                    <rect key="frame" x="166" y="323" width="42" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="sen-az-btI" firstAttribute="centerX" secondItem="GxD-Rc-anQ" secondAttribute="centerX" id="MK2-7M-1JD"/>
+                                <constraint firstItem="R3R-Sr-t1e" firstAttribute="centerY" secondItem="GxD-Rc-anQ" secondAttribute="centerY" id="MzB-J1-qeX"/>
+                                <constraint firstItem="sen-az-btI" firstAttribute="centerY" secondItem="GxD-Rc-anQ" secondAttribute="centerY" id="jqn-tA-YQq"/>
+                                <constraint firstItem="R3R-Sr-t1e" firstAttribute="centerX" secondItem="GxD-Rc-anQ" secondAttribute="centerX" id="zQu-PH-JGL"/>
+                            </constraints>
+                            <connections>
+                                <outlet property="loadingIndicator" destination="sen-az-btI" id="DSY-H8-1Tn"/>
+                                <outlet property="noResultLabel" destination="R3R-Sr-t1e" id="TOh-9C-YLY"/>
+                            </connections>
+                        </view>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="gKa-Z8-DSX" customClass="MyCollectionViewCell" customModule="prototype1" customModuleProvider="target">
                                 <rect key="frame" x="10" y="40" width="63" height="63"/>
@@ -61,10 +80,6 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Zg4-ka-mdw">
-                                            <rect key="frame" x="21" y="21" width="20" height="20"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </activityIndicatorView>
                                     </subviews>
                                 </view>
                                 <constraints>
@@ -84,7 +99,6 @@
                                     <outlet property="atomicMassLabel" destination="KzL-j4-PHb" id="lQz-53-vin"/>
                                     <outlet property="atomicNumberLabel" destination="ayY-TV-lB2" id="S7o-f5-HNc"/>
                                     <outlet property="label" destination="b0C-H2-Obq" id="0gM-ve-Xpu"/>
-                                    <outlet property="loadingIndicator" destination="Zg4-ka-mdw" id="GlJ-Bo-Eb7"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -113,11 +127,11 @@
                         <connections>
                             <outlet property="dataSource" destination="TVY-vc-OZk" id="Rh7-Rq-NGn"/>
                             <outlet property="delegate" destination="TVY-vc-OZk" id="cqn-Bj-F6c"/>
+                            <outlet property="helperView" destination="GxD-Rc-anQ" id="lWG-ET-8CV"/>
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Elements" id="E2p-UF-AEq"/>
                     <connections>
-                        <outlet property="noResultLabel" destination="Uls-5H-0Sn" id="AV9-H1-QDB"/>
                         <segue destination="tZy-IU-FzZ" kind="show" identifier="ShowDetail" id="gIT-hD-vCc"/>
                     </connections>
                 </collectionViewController>
@@ -269,6 +283,10 @@
                                                 </connections>
                                             </collectionReusableView>
                                         </collectionView>
+                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="pVS-Fo-JJs">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </activityIndicatorView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="Ip9-0j-hLV" secondAttribute="trailing" id="2Mx-G3-47x"/>
@@ -279,6 +297,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="collectionView" destination="Ip9-0j-hLV" id="57g-m0-yEK"/>
+                                    <outlet property="loadingIndicator" destination="pVS-Fo-JJs" id="RDm-Ms-NHG"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
